# no-comments

./: README.md  pyproject.toml
.github/workflows/: publish.yml
no_comments/: __init__.py  __main__.py  cli.py
shushpy/: __init__.py  __main__.py  cli.py
tests/: test_no_comments.py
