[project]
name = "shushpy"
version = "0.0.1dev2"
description = "Remove all comments and docstrings from Python code using a safe AST-based transform."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []
authors = [{ name = "vodkar" }]
license = { text = "MIT License" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]
urls = { Homepage = "https://pypi.org/project/shushpy/" }

[project.scripts]
shushpy = "shushpy.cli:main"

[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["pytest>=8.2"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*", "*Tests"]
python_functions = ["test_*"]
